# KuiperCourse

./: CMakeCache.txt  CMakeLists.txt  Notes.tldr  README.md  fouthtwoNotes.xmind  resnet.xmind  计算一个expression的过程.xmind
include/factory/: layer_factory.hpp
include/layer/: relu_layer.hpp
include/parser/: parse_expression.hpp
source/data/: load_data.cpp  tensor.cpp
source/factory/: layer_factory.cpp
source/layer/: conv_layer.cpp  relu_layer.cpp  sigmoid_layer.cpp
source/layer/details/: linear.cpp
source/parser/: parse_expression.cpp
source/runtime/: runtime_ir.cpp  runtime_op.cpp
test/: CMakeLists.txt  test_init_inoutput.cpp  test_load_data.cpp  test_main.cpp  test_relu.cpp  test_resnet.cpp  test_tensor.cpp  test_yolov5.cpp
